fixed spelling of 'odyssey'

--- a/test/makefile
+++ b/test/makefile
@@ -12,16 +12,16 @@ PROJECT_SRC				= src/*.d
 PROJECT_BUILD_PATH		= build
 PROJECT_IMPORT_FLAGS	= -Isrc
 
-ODESSEY_SRC_ROOT		= ../src
-ODESSEY_SRC		 		= $(ODESSEY_SRC_ROOT)/core/*.d  $(ODESSEY_SRC_ROOT)/math/*.d $(ODESSEY_SRC_ROOT)/render/*.d $(ODESSEY_SRC_ROOT)/util/*.d
-ODESSEY_INCLUDE_FLAGS	= -I../../src
+ODYSSEY_SRC_ROOT		= ../src
+ODYSSEY_SRC		 		= $(ODYSSEY_SRC_ROOT)/core/*.d  $(ODYSSEY_SRC_ROOT)/math/*.d $(ODYSSEY_SRC_ROOT)/render/*.d $(ODYSSEY_SRC_ROOT)/util/*.d
+ODYSSEY_INCLUDE_FLAGS	= -I../../src
 
 DER2_LINKER_FLAGS 		= -L-lDerelictUtil -L-lDerelictGL3 -L-lDerelictGLFW3
 
 all:
 	dmd $(DMD_BUILD_FLAGS) \
-	$(PROJECT_SRC) $(ODESSEY_SRC) \
-	$(PROJECT_IMPORT_FLAGS) $(ODESSEY_FLAGS) \
+	$(PROJECT_SRC) $(ODYSSEY_SRC) \
+	$(PROJECT_IMPORT_FLAGS) $(ODYSSEY_FLAGS) \
 	-I$(DER2_PATH)/import \
 	-L-L$(DER2_PATH)/lib \
 	$(DER2_LINKER_FLAGS) \
