--- a/test/makefile
+++ b/test/makefile
@@ -5,7 +5,7 @@ DER2_PATH = /usr/local/src/Derelict3
 
 #######################################################
 
-DMD_BUILD_FLAGS 		= -gc
+DMD_BUILD_FLAGS 		= -gc -unittest
 
 PROJECT_NAME 			= odesseytest
 PROJECT_SRC				= src/*.d
@@ -13,7 +13,7 @@ PROJECT_BUILD_PATH		= build
 PROJECT_IMPORT_FLAGS	= -Isrc
 
 ODYSSEY_SRC_ROOT		= ../src
-ODYSSEY_SRC		 		= $(ODYSSEY_SRC_ROOT)/core/*.d  $(ODYSSEY_SRC_ROOT)/math/*.d $(ODYSSEY_SRC_ROOT)/render/*.d $(ODYSSEY_SRC_ROOT)/util/*.d
+ODYSSEY_SRC		 		= $(ODYSSEY_SRC_ROOT)/core/*.d  $(ODYSSEY_SRC_ROOT)/math/vec*.d $(ODYSSEY_SRC_ROOT)/render/*.d $(ODYSSEY_SRC_ROOT)/util/*.d
 ODYSSEY_INCLUDE_FLAGS	= -I../../src
 
 DER2_LINKER_FLAGS 		= -L-lDerelictUtil -L-lDerelictGL3 -L-lDerelictGLFW3
