moved test project into triangle subfolder

--- a/test/triangle/makefile
+++ b/test/triangle/makefile
@@ -5,16 +5,16 @@ DER2_PATH = /usr/local/src/Derelict3
 
 #######################################################
 
-DMD_BUILD_FLAGS 		= -gc -unittest
+DMD_BUILD_FLAGS 		= -gc
 
 PROJECT_NAME 			= odesseytest
 PROJECT_SRC				= src/*.d
 PROJECT_BUILD_PATH		= build
 PROJECT_IMPORT_FLAGS	= -Isrc
 
-ODYSSEY_SRC_ROOT		= ../src
+ODYSSEY_SRC_ROOT		= ../../src
 ODYSSEY_SRC		 		= $(ODYSSEY_SRC_ROOT)/core/*.d  $(ODYSSEY_SRC_ROOT)/math/vec*.d $(ODYSSEY_SRC_ROOT)/render/*.d $(ODYSSEY_SRC_ROOT)/util/*.d
-ODYSSEY_INCLUDE_FLAGS	= -I../../src
+ODYSSEY_INCLUDE_FLAGS	= -I$(ODYSSEY_SRC_ROOT)
 
 DER2_LINKER_FLAGS 		= -L-lDerelictUtil -L-lDerelictGL3 -L-lDerelictGLFW3
 
