--- a/test/triangle/makefile
+++ b/test/triangle/makefile
@@ -5,7 +5,7 @@ DER2_PATH = /usr/local/src/Derelict3
 
 #######################################################
 
-DMD_BUILD_FLAGS 		= -gc
+DMD_BUILD_FLAGS 		= -gc -unittest
 
 PROJECT_NAME 			= odesseytest
 PROJECT_SRC				= src/*.d
@@ -13,7 +13,7 @@ PROJECT_BUILD_PATH		= build
 PROJECT_IMPORT_FLAGS	= -Isrc
 
 ODYSSEY_SRC_ROOT		= ../../src
-ODYSSEY_SRC		 		= $(ODYSSEY_SRC_ROOT)/*/*.d  
+ODYSSEY_SRC		 		= $(ODYSSEY_SRC_ROOT)/*/*.d
 ODYSSEY_INCLUDE_FLAGS	= -I$(ODYSSEY_SRC_ROOT)
 
 DER2_LINKER_FLAGS 		= -L-lDerelictUtil -L-lDerelictGL3 -L-lDerelictGLFW3
