change derelict path and build flags

--- a/test/triangle/makefile
+++ b/test/triangle/makefile
@@ -1,13 +1,16 @@
 #######################################################
 # Change based on your system's configuration
 
-DER2_PATH = /usr/local/src/Derelict3
+DER2_IMPORTDIR = /usr/local/d
+DER2_LIBDIR    = /usr/local/lib
 
 #######################################################
 
-DMD_BUILD_FLAGS 		= -gc -unittest
+D2 						= dmd
 
-PROJECT_NAME 			= odesseytest
+D2_BUILD_FLAGS 			= -g -property
+
+PROJECT_NAME 			= triangle
 PROJECT_SRC				= src/*.d
 PROJECT_BUILD_PATH		= build
 PROJECT_IMPORT_FLAGS	= -Isrc
@@ -19,13 +22,13 @@ ODYSSEY_INCLUDE_FLAGS	= -I$(ODYSSEY_SRC_ROOT)
 DER2_LINKER_FLAGS 		= -L-lDerelictUtil -L-lDerelictGL3 -L-lDerelictGLFW3
 
 all:
-	dmd $(DMD_BUILD_FLAGS) \
-	$(PROJECT_SRC) $(ODYSSEY_SRC) \
+	$(D2) $(DMD_BUILD_FLAGS) \
 	$(PROJECT_IMPORT_FLAGS) $(ODYSSEY_FLAGS) \
-	-I$(DER2_PATH)/import \
-	-L-L$(DER2_PATH)/lib \
+	-I/usr/local/src/Derelict3/import/ \
+	-L-L/usr/local/src/Derelict3/lib/ \
 	$(DER2_LINKER_FLAGS) \
-	-od$(PROJECT_BUILD_PATH) -of$(PROJECT_BUILD_PATH)/$(PROJECT_NAME)
+	-od$(PROJECT_BUILD_PATH) -of$(PROJECT_BUILD_PATH)/$(PROJECT_NAME) \
+	$(PROJECT_SRC) $(ODYSSEY_SRC)
 	
 run:
 	@./$(PROJECT_BUILD_PATH)/$(PROJECT_NAME)
